Made it more generic, as a good base.

--- a/CoverLetter.tex
+++ b/CoverLetter.tex
@@ -47,7 +47,7 @@
 
 % All information in this block is optional, comment out any lines you don't need
 \title{Curriculum Vitae}
-\address{Dag Hammarskj\"{o}lds v\"{a}g 5H}{224 64 Lund, Sweden}
+\address{Brutorget 10}{3510 H\o nefoss, Norway}
 \mobile{(+46) 0739 639919}
 %\phone{(000) 111 1112}
 %\fax{(000) 111 1113}
@@ -203,11 +203,11 @@
 
 \clearpage
 
-\recipient{Fingerprints}{Malm\"{o}} % Letter recipient
+\recipient{Company name}{City} % Letter recipient
 \date{\today} % Letter date
 \opening{Dear Sir or Madam,} % Opening greeting
 \closing{Sincerely yours,} % Closing phrase
-\enclosure[Attached]{curriculum vit\ae{}} % List of enclosed documents
+\enclosure[Attached]{curriculum vitae{}} % List of enclosed documents
 
 \makelettertitle % Print letter title
 
