--- a/CoverLetter.tex
+++ b/CoverLetter.tex
@@ -203,36 +203,54 @@
 
 \clearpage
 
-\recipient{Company name}{City} % Letter recipient
+\recipient{COMPANY NAME}{CITY} % Letter recipient
 \date{\today} % Letter date
 \opening{Dear Sir or Madam,} % Opening greeting
 \closing{Sincerely yours,} % Closing phrase
-\enclosure[Attached]{curriculum vitae{}} % List of enclosed documents
+\enclosure[Attached]{Curriculum Vitae{}} % List of enclosed documents
 
 \makelettertitle % Print letter title
 
-My name is Dan and i have a M.Sc. in Engineering physics and a few years of experience in software development.
-As a young engineer my main skills focus around programming, automation, automatic control and mechatronics systems.
-I believe the combination of a technical interest, love for programming and a desire to learn and challenge myself makes me a great candidate for a position as Software Developer at Fingerprints.
+My name is Dan and i possess a M.Sc. in Engineering physics with a specialization in applied automatic control and a handful years of experience in aviation and industrial machines.
+As an engineer my main skills are focused to programming, automation, automatic control and mechatronics systems.
+I believe the combination of a technical interest, love for programming and a desire to learn and challenge myself makes me a great candidate for the position as POSITION at COMPANY NAME.
 
-I am hands-on software engineer, with a passion for learning and challenging myself.
-In my work I am reliable, result oriented and prefer to work systematic.
-My main role as consultant has been to develop software to run on large industrial machinery.
-With a passion for learning and technology I often find myself building deep knowledge of an entire system.
-Thus resulting in being a key asset in a team and the person to turn to for ideas, know-how and to get subsystems to work together.
-Ease of learning new systems and a passion for problem solving has also made me an excellent troubleshooter, both electrical and software.
-I have also been highly involved in data analysis and data presentation when evaluating key functions in a development project.
-As a team player I am social, initiative, practical and eager to help.
 
-When a student, I balanced a rigorous course load and an evening theatre job to keep my economy stable.
-From the second year I also added extra courses to the curriculum to satisfy my hunger for learning, especially programming and other computer courses.
-Even though the extra heavy workload, I have always met with deadlines and have never failed a single exam.
-Graduate courses has been characterized by control, embedded programming, math and some extra courses in computer architecture. 
-My education and interests lead up to a thesis project were a combination of Matlab, Simulink, SimMechanics and Embedded Coder was used to model and program a walking hexapod robot.
+Employed as a Flight Control Engineer in a start-up UAS company, I have demonstrated strong learning skills and the ability to work in a versatile and challenging environment. 
+My main responsibilities include being in charge of developing autonomous flight for several UAV systems. 
+Through study, knowledge and determination I use my skills to bring fixed-wing and single rotor systems to achieve full autonomous flight, including take-off and landing. 
+This by integrating autopilot hardware on in-house designed airframes, requiring programming, configuration and testing in a safe environment.
+\newline
+At my current position I built a flight test organization from scratch. 
+Setting up everything from planning, flight brief, execution, de-brief to post-flight analysis and data storing. Acting as Flight Test Engineer, UAS operator and Pilot in Command I have executed over 100 missions both VLOS and BVLOS, being in charge of flight test crews of up to 8 individuals.
 
-As a young engineer I am interested in work that challenges me and at the same time continues to educate me.
-I enjoy travelling and the cultural and intellectual experience that it brings.
+%I am a hands-on software engineer, with a passion for learning and challenging myself.
+%My main role as consultant has been to develop software to run on large industrial machinery.
+%With a passion for learning and technology I often find myself building deep knowledge of an entire system.
+%Thus resulting in being a key asset in a team and the person to turn to for ideas, know-how and to get subsystems to work together.
+%Ease of learning new systems and a passion for problem solving has also made me an excellent troubleshooter, both electrical and software.
+%I have also been highly involved in data analysis and data presentation when evaluating key functions in a development project.
+%As a team player I am social, initiative, practical and eager to help.
+
+%Tetra Pak Rig story
+In my work I am reliable, result oriented and prefer to work systematic, utilizing automation for time-consuming tasks. 
+These traits helped me lead software development for a test rig at Tetra Pak to complete within deadline although suffering mechanical design delays. 
+Software testing was not possible as scheduled due to delays in mechanical design, then the utilization of simulation in MATLAB and Simulink helped provide alternate  means of testing code along the development process. 
+Working systematically and building reusable generic building blocks in software additionally aided the development and I'm proud to claim the rig was operational to deadline.
+
+%%Student
+%When a student, I balanced a rigorous course load and an evening theatre job to keep my economy stable.
+%From the second year I also added extra courses to the curriculum to satisfy my hunger for learning, especially programming and other computer courses.
+%Even though the extra heavy workload, I have always met with deadlines and have never failed a single exam.
+%Graduate courses has been characterized by control, embedded programming, math and some extra courses in computer architecture. 
+%My education and interests lead up to a thesis project were a combination of Matlab, Simulink, SimMechanics and Embedded Coder was used to model and program a walking hexapod robot.
+
+As a young engineer I am interested in work that challenges me and at the same time continues to educate me. 
+I believe my skill-set, passion and attitude can be of great value to your organization.
+Travelling and the cultural and intellectual experience that brings is viewed as a positive element.
+\newline
 Lastly, I would like to thank you for taking the time to consider my credentials and I am looking forward to hearing from you.
+
 
 \makeletterclosing % Print letter signature
 
