Review hel by Mor and Ulf

--- a/CoverLetter.tex
+++ b/CoverLetter.tex
@@ -23,14 +23,14 @@
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
-\documentclass[11pt,a4paper,sans]{moderncv} % Font sizes: 10, 11, or 12; paper sizes: a4paper, letterpaper, a5paper, legalpaper, executivepaper or landscape; font families: sans or roman
+\documentclass[12pt,a4paper,sans]{moderncv} % Font sizes: 10, 11, or 12; paper sizes: a4paper, letterpaper, a5paper, legalpaper, executivepaper or landscape; font families: sans or roman
 
 \moderncvstyle{casual} % CV theme - options include: 'casual' (default), 'classic', 'oldstyle' and 'banking'
 \moderncvcolor{purple} % CV color - options include: 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
 
 \usepackage{lipsum} % Used for inserting dummy 'Lorem ipsum' text into the template
 
-\usepackage[scale=0.75]{geometry} % Reduce document margins
+\usepackage[scale=0.84]{geometry} % Reduce document margins
 %\setlength{\hintscolumnwidth}{3cm} % Uncomment to change the width of the dates column
 %\setlength{\makecvtitlenamewidth}{10cm} % For the 'classic' style, uncomment to adjust the width of the space allocated to your name
 
@@ -211,8 +211,8 @@
 
 \makelettertitle % Print letter title
 
-My name is Dan and i possess a M.Sc. in Engineering physics with a specialization in applied automatic control and a handful years of experience in aviation and industrial machines.
-As an engineer my main skills are focused to programming, automation, automatic control and mechatronics systems.
+My name is Dan and i possess a M.Sc. in Engineering physics with a specialization in applied automatic control with experience in aviation and industrial machinery.
+I am a natural leader and my main skills are focused on programming, automation, automatic control and mechatronics systems.
 I believe the combination of a technical interest, love for programming and a desire to learn and challenge myself makes me a great candidate for the position as POSITION at COMPANY NAME.
 
 
@@ -221,8 +221,8 @@ My main responsibilities include being in charge of developing autonomous flight
 Through study, knowledge and determination I use my skills to bring fixed-wing and single rotor systems to achieve full autonomous flight, including take-off and landing. 
 This by integrating autopilot hardware on in-house designed airframes, requiring programming, configuration and testing in a safe environment.
 \newline
-At my current position I built a flight test organization from scratch. 
-Setting up everything from planning, flight brief, execution, de-brief to post-flight analysis and data storing. Acting as Flight Test Engineer, UAS operator and Pilot in Command I have executed over 100 missions both VLOS and BVLOS, being in charge of flight test crews of up to 8 individuals.
+At my current position I have built a flight test organization from scratch with focus on safety and results. 
+Setting up everything from planning, flight brief, execution, de-brief to post-flight analysis and data storing. Acting as Flight Test Engineer, UAS operator and Pilot in Command I have executed over 100 operations both VLOS and BVLOS, being in charge of flight test crews of up to 8 individuals.
 
 %I am a hands-on software engineer, with a passion for learning and challenging myself.
 %My main role as consultant has been to develop software to run on large industrial machinery.
@@ -233,10 +233,10 @@ Setting up everything from planning, flight brief, execution, de-brief to post-f
 %As a team player I am social, initiative, practical and eager to help.
 
 %Tetra Pak Rig story
-In my work I am reliable, result oriented and prefer to work systematic, utilizing automation for time-consuming tasks. 
-These traits helped me lead software development for a test rig at Tetra Pak to complete within deadline although suffering mechanical design delays. 
-Software testing was not possible as scheduled due to delays in mechanical design, then the utilization of simulation in MATLAB and Simulink helped provide alternate  means of testing code along the development process. 
-Working systematically and building reusable generic building blocks in software additionally aided the development and I'm proud to claim the rig was operational to deadline.
+In my work I am reliable, result oriented and prefer to work methodically and efficient. 
+These traits helped me lead software development for a test rig at Tetra Pak to complete within the deadline although suffering delays in mechanical design. 
+The utilization of simulation in MATLAB and Simulink helped to provide alternative  means of testing code along the development process. 
+Working systematically and building reusable generic building blocks in software additionally aided the development and I'm proud to claim the rig was operational before the deadline.
 
 %%Student
 %When a student, I balanced a rigorous course load and an evening theatre job to keep my economy stable.
@@ -245,8 +245,8 @@ Working systematically and building reusable generic building blocks in software
 %Graduate courses has been characterized by control, embedded programming, math and some extra courses in computer architecture. 
 %My education and interests lead up to a thesis project were a combination of Matlab, Simulink, SimMechanics and Embedded Coder was used to model and program a walking hexapod robot.
 
-As a young engineer I am interested in work that challenges me and at the same time continues to educate me. 
-I believe my skill-set, passion and attitude can be of great value to your organization.
+I am interested in work that challenges me and at the same time continues to develop me.
+I believe my skill-set, passion, attitude and management experience can be of great value to your organization.
 Travelling and the cultural and intellectual experience that brings is viewed as a positive element.
 \newline
 Lastly, I would like to thank you for taking the time to consider my credentials and I am looking forward to hearing from you.
