Fine tuning some last scentences

--- a/CoverLetter.tex
+++ b/CoverLetter.tex
@@ -216,13 +216,13 @@ I am a natural leader and my main skills are focused on programming, automation,
 I believe the combination of a technical interest, love for programming and a desire to learn and challenge myself makes me a great candidate for the position as POSITION at COMPANY NAME.
 
 
-Employed as a Flight Control Engineer in a start-up UAS company, I have demonstrated strong learning skills and the ability to work in a versatile and challenging environment. 
-My main responsibilities include being in charge of developing autonomous flight for several UAV systems. 
+Employed as a Flight Control Engineer in a unmanned aviation company, I have demonstrated strong learning skills and the ability to work in a versatile and challenging environment. 
+My main responsibilities include being in charge of developing autonomous flight for several unmanned systems. 
 Through study, knowledge and determination I use my skills to bring fixed-wing and single rotor systems to achieve full autonomous flight, including take-off and landing. 
 This by integrating autopilot hardware on in-house designed airframes, requiring programming, configuration and testing in a safe environment.
 \newline
 At my current position I have built a flight test organization from scratch with focus on safety and results. 
-Setting up everything from planning, flight brief, execution, de-brief to post-flight analysis and data storing. Acting as Flight Test Engineer, UAS operator and Pilot in Command I have executed over 100 operations both VLOS and BVLOS, being in charge of flight test crews of up to 8 individuals.
+Setting up everything from planning, flight brief, execution, de-brief to post-flight analysis and data storing. Acting as Flight Test Engineer, UAV operator and Pilot in Command I have executed over 100 operations both within and beyond visible line of sight, being in charge of flight test crews of up to 8 individuals.
 
 %I am a hands-on software engineer, with a passion for learning and challenging myself.
 %My main role as consultant has been to develop software to run on large industrial machinery.
@@ -247,7 +247,7 @@ Working systematically and building reusable generic building blocks in software
 
 I am interested in work that challenges me and at the same time continues to develop me.
 I believe my skill-set, passion, attitude and management experience can be of great value to your organization.
-Travelling and the cultural and intellectual experience that brings is viewed as a positive element.
+Travelling brings cultural and intellectual experience which I view as a positive element.
 \newline
 Lastly, I would like to thank you for taking the time to consider my credentials and I am looking forward to hearing from you.
 
