Updated based on Padres redline.

--- a/CoverLetter.tex
+++ b/CoverLetter.tex
@@ -211,18 +211,18 @@
 
 \makelettertitle % Print letter title
 
-My name is Dan and i possess a M.Sc. in Engineering physics with a specialization in applied automatic control with experience in aviation and industrial machinery.
+My name is Dan, and i have a M.Sc. in Engineering physics with a specialization in applied automatic control with experience in aviation and industrial machinery.
 I am a natural leader and my main skills are focused on programming, automation, automatic control and mechatronics systems.
 I believe the combination of a technical interest, love for programming and a desire to learn and challenge myself makes me a great candidate for the position as POSITION at COMPANY NAME.
 
 
-Employed as a Flight Control Engineer in a unmanned aviation company, I have demonstrated strong learning skills and the ability to work in a versatile and challenging environment. 
+Employed as a Flight Control Engineer in an unmanned aviation company, I have demonstrated strong learning skills and the ability to work in a versatile and challenging environment. 
 My main responsibilities include being in charge of developing autonomous flight for several unmanned systems. 
-Through study, knowledge and determination I use my skills to bring fixed-wing and single rotor systems to achieve full autonomous flight, including take-off and landing. 
+Through studies, knowledge and determination I use my skills to bring fixed-wing and single rotor systems to achieve full autonomous flight, including take-off and landing. 
 This by integrating autopilot hardware on in-house designed airframes, requiring programming, configuration and testing in a safe environment.
 \newline
-At my current position I have built a flight test organization from scratch with focus on safety and results. 
-Setting up everything from planning, flight brief, execution, de-brief to post-flight analysis and data storing. Acting as Flight Test Engineer, UAV operator and Pilot in Command I have executed over 100 operations both within and beyond visible line of sight, being in charge of flight test crews of up to 8 individuals.
+In my current position I have built a flight test organization from scratch, with focus on safety and results. 
+This by setting up everything from planning, flight brief, execution, de-brief to post-flight analysis and data storing. Acting as Flight Test Engineer, UAV operator and Pilot in Command I have executed over 100 operations, both within and beyond visible line of sight, being in charge of flight test crews of up to 8 individuals.
 
 %I am a hands-on software engineer, with a passion for learning and challenging myself.
 %My main role as consultant has been to develop software to run on large industrial machinery.
@@ -234,9 +234,9 @@ Setting up everything from planning, flight brief, execution, de-brief to post-f
 
 %Tetra Pak Rig story
 In my work I am reliable, result oriented and prefer to work methodically and efficient. 
-These traits helped me lead software development for a test rig at Tetra Pak to complete within the deadline although suffering delays in mechanical design. 
+These traits helped me lead software development for a test rig at Tetra Pak to complete within the deadline, although suffering delays in mechanical design. 
 The utilization of simulation in MATLAB and Simulink helped to provide alternative  means of testing code along the development process. 
-Working systematically and building reusable generic building blocks in software additionally aided the development and I'm proud to claim the rig was operational before the deadline.
+Working systematically and building reusable generic building blocks in software additionally aided the development and I am proud to claim the rig was operational before the deadline.
 
 %%Student
 %When a student, I balanced a rigorous course load and an evening theatre job to keep my economy stable.
@@ -249,7 +249,7 @@ I am interested in work that challenges me and at the same time continues to dev
 I believe my skill-set, passion, attitude and management experience can be of great value to your organization.
 Travelling brings cultural and intellectual experience which I view as a positive element.
 \newline
-Lastly, I would like to thank you for taking the time to consider my credentials and I am looking forward to hearing from you.
+Finally, I would like to thank you for taking the time to consider my credentials and I am looking forward to hearing from you.
 
 
 \makeletterclosing % Print letter signature
